Adding  xhr handler, pre middleware, xhr template parser

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   },
   "dependencies": {
     "isarray": "0.0.1",
+    "kevbook.flow": "latest",
     "path-to-regexp": "^1.0.3",
     "query-string": "^1.0.0",
     "tiny-emitter": "^1.0.0",
-    "kevbook.flow": "latest"
+    "xhr": "latest"
   },
   "devDependencies": {
     "babel-core": "latest",
